--- a/home.html
+++ b/home.html
@@ -42,17 +42,17 @@
     <!-- Recordar que favicon.ico tiene que estar en el directorio inicial -->
 
     <!-- links de estilos -->
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/header.css" />
-    <link rel="stylesheet" href="/css/footer.css" />
-    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/home.css" />
 
     <!-- Se cambia el tema de algunos navegadores -->
     <meta name="theme-color" content="#fafafa" />
     <!-- Código de las plataformas de Análisis -->
     <script></script>
     <!-- Scripts a cargar antes de la renderización -->
-    <script src="/js/menu.js" defer></script>
+    <script src="./js/menu.js" defer></script>
   </head>
 
   <body class="body">
@@ -105,7 +105,7 @@
 
     <main class="main" id="main">
       <div class="hero__img">
-        <div class="aside__darkmodebutton"><img src="/svg/Moon_Vector.svg" alt="" class="darkmode__icon"></div>
+        <div class="aside__darkmodebutton"><img src="./svg/Moon_Vector.svg" alt="" class="darkmode__icon"></div>
 
         <section class="title__container">
           <h1 class="title">Welcome to Fetta di Beatitudine</h1>
@@ -139,7 +139,7 @@
         </article>
         <article class="promotion__right">
           <img
-            src="/svg/game-icons_full-pizza.svg"
+            src="./svg/game-icons_full-pizza.svg"
             alt="pizza"
             class="promotion__img"
           />
@@ -151,7 +151,7 @@
 
       <section class="fixedimg">
         <img
-          src="/img/avif/home-table_desktop.avif"
+          src="./img/avif/home-table_desktop.avif"
           alt="table with pizzas"
           class="fixedimg__img"
         />
@@ -176,7 +176,7 @@
         </article>
         <article class="article__bottom">
           <img
-            src="/img/avif/pizza-salami&pepperoni1920x1920.avif"
+            src="./img/avif/pizza-salami&pepperoni1920x1920.avif"
             alt="pizza salami and pepperoni"
             class="bottom__img"
           />
@@ -201,9 +201,9 @@
 
     <footer class="footer">
       <div class="footer__container">
-        <a href="/index.html" class="footer__logo"
+        <a href="./index.html" class="footer__logo"
           ><img
-            src="/img/logo/png/logo-no-background.png"
+            src="./img/logo/png/logo-no-background.png"
             srcset=""
             alt="logo pizzeria"
             class="logo__img"
@@ -211,15 +211,15 @@
         <section class="footer__content">
           <ul class="footer__links">
             <li class="footer__link">
-              <a href="/privacypolicy.html" class="link__technical"
+              <a href="./privacypolicy.html" class="link__technical"
                 >Privacy Policy</a
               >
             </li>
             <li class="footer__link">
-              <a href="/legal.html" class="link__technical">Legal Notice</a>
+              <a href="./legal.html" class="link__technical">Legal Notice</a>
             </li>
             <li class="footer__link">
-              <a href="/terms.html" class="link__technical"
+              <a href="./terms.html" class="link__technical"
                 >Terms and Conditions</a
               >
             </li>
@@ -230,23 +230,23 @@
               href="https://www.instagram.com/pizzeria.fettadibeatitudine/"
               class="social__link"
               ><img
-                src="/svg/Instagram_Vector.svg"
+                src="./svg/Instagram_Vector.svg"
                 srcset=""
                 alt="instagram" /></a
             ><a
               href="https://www.facebook.com/pizzeria.fettadibeatitudine/"
               class="social__link"
-              ><img src="/svg/Facebook_Vector.svg" srcset="" alt="facebook"
+              ><img src="./svg/Facebook_Vector.svg" srcset="" alt="facebook"
             /></a>
             <a
               href="https://www.twitter.com/pizzeria.fettadibeatitudine/"
               class="social__link"
-              ><img src="/svg/X-Twitter_Vector.svg" srcset="" alt="instagram"
+              ><img src="./svg/X-Twitter_Vector.svg" srcset="" alt="instagram"
             /></a>
             <a
               href="https://www.pinterest.com/pizzeria.fettadibeatitudine/"
               class="social__link"
-              ><img src="/svg/Pinterest_Vector.svg" srcset="" alt="youtube"
+              ><img src="./svg/Pinterest_Vector.svg" srcset="" alt="youtube"
             /></a>
           </div>
         </section>
