--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <!-- Recordar que favicon.ico tiene que estar en el directorio inicial -->
 
     <!-- links de estilos -->
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/landing.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/landing.css" />
 
     <!-- <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/footer.css" /> -->
@@ -54,7 +54,7 @@
     <script></script>
     <!-- Scripts a cargar antes de la renderización -->
     <!-- <script src="/js/menu.js" defer></script> -->
-    <script src="/js/countdown.js" defer></script>
+    <script src="./js/countdown.js" defer></script>
   </head>
 
   <body>
