--- a/template.html
+++ b/template.html
@@ -42,16 +42,16 @@
     <!-- Recordar que favicon.ico tiene que estar en el directorio inicial -->
 
     <!-- links de estilos -->
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/header.css" />
-    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
 
     <!-- Se cambia el tema de algunos navegadores -->
     <meta name="theme-color" content="#fafafa" />
     <!-- Código de las plataformas de Análisis -->
     <script></script>
     <!-- Scripts a cargar antes de la renderización -->
-    <script src="/js/menu.js" defer></script>
+    <script src="./js/menu.js" defer></script>
   </head>
 
   <body>
@@ -100,25 +100,16 @@
         />
       </section>
     </header>
-    <!-- <div id="container"> -->
-    <main id="main">
-      <div class="container">
-        <section class="hero">
-          <img src="images/pizzeria.jpg" alt="Pizzeria Interior" />
-          <p>Welcome to our Pizzeria! Join us for our next special event:</p>
-          <div id="countdown"></div>
-        </section>
-      </div>
-    </main>
+
 
     <!-- Include footer -->
     <!-- <div data-include="footer.html"></div> -->
 
     <footer class="footer">
       <div class="footer__container">
-        <a href="/index.html" class="footer__logo"
+        <a href="./index.html" class="footer__logo"
           ><img
-            src="/img/logo/png/logo-no-background.png"
+            src="./img/logo/png/logo-no-background.png"
             srcset=""
             alt="logo pizzeria"
             class="logo__img"
@@ -126,15 +117,15 @@
         <section class="footer__content">
           <ul class="footer__links">
             <li class="footer__link">
-              <a href="/privacypolicy.html" class="link__technical"
+              <a href="./privacypolicy.html" class="link__technical"
                 >Privacy Policy</a
               >
             </li>
             <li class="footer__link">
-              <a href="/legal.html" class="link__technical">Legal Notice</a>
+              <a href="./legal.html" class="link__technical">Legal Notice</a>
             </li>
             <li class="footer__link">
-              <a href="/terms.html" class="link__technical"
+              <a href="./terms.html" class="link__technical"
                 >Terms and Conditions</a
               >
             </li>
@@ -145,23 +136,23 @@
               href="https://www.instagram.com/pizzeria.fettadibeatitudine/"
               class="social__link"
               ><img
-                src="/svg/Instagram_Vector.svg"
+                src="./svg/Instagram_Vector.svg"
                 srcset=""
                 alt="instagram" /></a
             ><a
               href="https://www.facebook.com/pizzeria.fettadibeatitudine/"
               class="social__link"
-              ><img src="/svg/Facebook_Vector.svg" srcset="" alt="facebook"
+              ><img src="./svg/Facebook_Vector.svg" srcset="" alt="facebook"
             /></a>
             <a
               href="https://www.twitter.com/pizzeria.fettadibeatitudine/"
               class="social__link"
-              ><img src="/svg/X-Twitter_Vector.svg" srcset="" alt="instagram"
+              ><img src="./svg/X-Twitter_Vector.svg" srcset="" alt="instagram"
             /></a>
             <a
               href="https://www.pinterest.com/pizzeria.fettadibeatitudine/"
               class="social__link"
-              ><img src="/svg/Pinterest_Vector.svg" srcset="" alt="youtube"
+              ><img src="./svg/Pinterest_Vector.svg" srcset="" alt="youtube"
             /></a>
           </div>
         </section>
