--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
 
     <header class="header" id="header">
       <section class="header__container">
-        <a href="/index.html" class="logo"
+        <a href="./index.html" class="logo"
           ><img
             class="logo__img"
             src="/img/logo/png/logo-no-background.png"
@@ -95,7 +95,7 @@
         </nav>
         <!-- MENU RESPONSIVE(hamburger) -->
         <img
-          src="/svg/Hamburger_Vector.svg"
+          src="./svg/Hamburger_Vector.svg"
           alt="hamburger menu"
           class="hamburger__menu-toggle"
           id="hamburger__menu-toggle"
