--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <section class="container">
         
           <img
-            src="/img/logo/png/logo-no-background.png"
+            src="./img/logo/png/logo-no-background.png"
             srcset=""
             alt="logo pizzeria"
             class="logo__img"
@@ -77,10 +77,7 @@
           <h3 class="countdown__title">We're opening in:</h3>
           <div id="countdown" class="countdown">
             <div id="timer" class="countdown__timer">
-              <div id="days" class="timer__item"></div>
-              <div id="hours" class="timer__item"></div>
-              <div id="minutes" class="timer__item"></div>
-              <div id="seconds" class="timer__item"></div>
+              
             </div>
           </div>
         </section>
