--- a/template.html
+++ b/template.html
@@ -60,16 +60,16 @@
 
     <header class="header" id="header">
       <section class="header__container">
-        <a href="/index.html" class="logo"
+        <a href="./index.html" class="logo"
           ><img class="logo__img" 
-            src="/img/logo/png/logo-no-background.png"
+            src="./img/logo/png/logo-no-background.png"
             srcset=""
             alt="logo pizzeria"
         /></a>
         <nav class="nav">
           <ul class="nav__links">
             <li class="links__item">
-              <a href="/home.html" class="nav__item link__active">Home</a>
+              <a href="./home.html" class="nav__item link__active">Home</a>
             </li>
             <li class="links__item">
               <a href="about.html" class="nav__item">About</a>
@@ -93,7 +93,7 @@
         </nav>
         <!-- MENU RESPONSIVE(hamburger) -->
         <img
-          src="/svg/Hamburger_Vector.svg"
+          src="./svg/Hamburger_Vector.svg"
           alt="hamburger menu"
           class="hamburger__menu-toggle"
           id="hamburger__menu-toggle"
