--- a/home.html
+++ b/home.html
@@ -61,10 +61,10 @@
 
     <header class="header" id="header">
       <section class="header__container">
-        <a href="./index.html" class="logo"
+        <a href="./home.html" class="logo"
           ><img
             class="logo__img"
-            src="/img/logo/png/logo-no-background.png"
+            src="./img/logo/png/logo-no-background.png"
             srcset=""
             alt="logo pizzeria"
         /></a>
