--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Código de las plataformas de Análisis -->
     <script></script>
     <!-- Scripts a cargar antes de la renderización -->
-    <!-- <script src="/js/menu.js" defer></script> -->
+    <!-- <script src="./js/menu.js" defer></script> -->
     <script src="./js/countdown.js" defer></script>
   </head>
 
