--- a/template.html
+++ b/template.html
@@ -60,7 +60,7 @@
 
     <header class="header" id="header">
       <section class="header__container">
-        <a href="./index.html" class="logo"
+        <a href="./home.html" class="logo"
           ><img class="logo__img" 
             src="./img/logo/png/logo-no-background.png"
             srcset=""
@@ -69,7 +69,7 @@
         <nav class="nav">
           <ul class="nav__links">
             <li class="links__item">
-              <a href="./home.html" class="nav__item link__active">Home</a>
+              <a href="home.html" class="nav__item link__active">Home</a>
             </li>
             <li class="links__item">
               <a href="about.html" class="nav__item">About</a>
