changes darkmode button

--- a/template.html
+++ b/template.html
@@ -54,7 +54,7 @@
     <script src="./js/menu.js" defer></script>
   </head>
 
-  <body>
+  <body class="body grey-light">
     <!-- Include header -->
     <!-- <div data-include="/components/header.html"></div> -->
 
