about page complete

--- a/home.html
+++ b/home.html
@@ -91,6 +91,15 @@
             <li class="links__item">
               <a href="ingredients.html" class="nav__item">Ingredients</a>
             </li>
+            <li class="links__item">
+              <div class="aside__darkmodebutton grey-light">
+                <img
+                  src="./svg/Moon_Vector.svg"
+                  alt=""
+                  class="darkmode__icon moon"
+                />
+              </div>
+            </li>
           </ul>
         </nav>
         <!-- MENU RESPONSIVE(hamburger) -->
@@ -105,7 +114,7 @@
 
     <main class="main" id="main">
       <div class="hero__img">
-        <div class="aside__darkmodebutton grey-light"><img src="./svg/Moon_Vector.svg" alt="" class="darkmode__icon moon"></div>
+
 
         <section class="title__container">
           <h1 class="title">Welcome to Fetta di Beatitudine</h1>
