--- a/menu.html
+++ b/menu.html
@@ -35,71 +35,363 @@
     <!-- Recordar que favicon.ico tiene que estar en el directorio inicial -->
 
     <!-- links de estilos -->
-    <link rel="stylesheet" href="css/styles.css" />
-    
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/menu.css" />
+
     <!-- Se cambia el tema de algunos navegadores -->
     <meta name="theme-color" content="#fafafa" />
     <!-- Código de las plataformas de Análisis -->
     <script></script>
     <!-- Scripts a cargar antes de la renderización -->
-    <!-- <script src="preloader.js"></script> -->
+    <script src="./js/menu.js" defer></script>
   </head>
 
-  <body>
+  <body class="body grey-light">
     <!-- Include header -->
     <!-- <div data-include="/components/header.html"></div> -->
-    <header>
-      <div class="container">
-          <h1>Pizzeria</h1>
-          <nav>
-              <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="menu.html">Menu</a></li>
-                  <li><a href="specials.html">Specials</a></li>
-                  <li><a href="order.html">Order Online</a></li>
-                  <li><a href="events.html">Events</a></li>
-                  <li><a href="gallery.html">Gallery</a></li>
-                  <li><a href="blog.html">Blog</a></li>
-                  <li><a href="reviews.html">Reviews</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-              </ul>
-          </nav>
+
+    <header class="header" id="header">
+      <section class="header__container">
+        <a href="./home.html" class="logo"
+          ><img
+            class="logo__img"
+            src="./img/logo/png/logo-no-background.png"
+            srcset=""
+            alt="logo pizzeria"
+        /></a>
+
+        <nav class="nav">
+          <ul class="nav__links">
+            <li class="links__item">
+              <a href="home.html" class="nav__item">Home</a>
+            </li>
+            <li class="links__item">
+              <a href="about.html" class="nav__item">About</a>
+            </li>
+            <li class="links__item">
+              <a href="menu.html" class="nav__item link__active">Menu</a>
+            </li>
+            <li class="links__item">
+              <a href="discounts.html" class="nav__item">Discounts</a>
+            </li>
+            <li class="links__item">
+              <a href="order.html" class="nav__item">ORDER</a>
+            </li>
+            <li class="links__item">
+              <a href="reservation.html" class="nav__item">Reservation</a>
+            </li>
+            <li class="links__item">
+              <a href="ingredients.html" class="nav__item">Ingredients</a>
+            </li>
+            <li class="links__item">
+              <div class="aside__darkmodebutton grey-light">
+                <img
+                  src="./svg/Moon_Vector.svg"
+                  alt=""
+                  class="darkmode__icon moon"
+                />
+              </div>
+            </li>
+          </ul>
+        </nav>
+        <!-- MENU RESPONSIVE(hamburger) -->
+        <img
+          src="./svg/Hamburger_Vector.svg"
+          alt="hamburger menu"
+          class="hamburger__menu-toggle"
+          id="hamburger__menu-toggle"
+        />
+      </section>
+    </header>
+
+    <main class="main" id="main">
+      <div class="hero__img">
+        <section class="title__container">
+          <h1 class="title">Our Menu</h1>
+          <article class="subtitle">
+            <ul class="subtitle__text">
+              <li class="text__menu-items">Classic Pizzas</li>
+              <li class="text__menu-items">Special Pizzas</li>
+              <li class="text__menu-items">Apetizers</li>
+              <li class="text__menu-items">Salads</li>
+              <li class="text__menu-items">Desserts</li>
+              <li class="text__menu-items">Specials & Promotions</li>
+            </ul>
+            <p class="subtitle__text-2">Buon Appetito!</p>
+          </article>
+
+        </section>
+
+        <section class="aside">
+          <button class="aside__discount" onclick="location.href='order.html'">
+            Make an order!
+          </button>
+        </section>
       </div>
-  </header>
-    <!-- <div id="container"> -->
+
+      <section class="menu__container">
+        <article class="container__left menu__cards">
+          <h2 class="menu__title">CLASSIC PIZZAS</h2>
+          
+          <figure class="menu__card">
+            <picture class="card__img">
+              <source srcset="./img/avif/pizza-margharita_1280x1280.avif" type="image/avif">
+              <img src="" alt="">
+            </picture>
+            <figcaption class="card__text">
+              <div class="text__container">
+                <h3 class="card__title">Margherita(Margherita)</h3>
+                <p class="class__subtitle">A classic favorite featuring fresh mozzarella, homemade tomato sauce, and basil leaves on a perfectly baked crust.</p>
+              </div>
+              <div class="card__price">
+                <p class="price__text">Price:</p>
+                <p class="price__amount">8.00€</p>
+              </div>
+
+            </figcaption>
+          </figure>
+
+          <figure class="menu__card">
+            <picture class="card__img">
+              <source srcset="./img/avif/pizza-peperoni_1920x1920.avif" type="image/avif">
+              <img src="" alt="">
+            </picture>
+            <figcaption class="card__text">
+              <div class="text__container">
+                <h3 class="card__title">Pepperoni (Pepperoni)</h3>
+                <p class="class__subtitle">Delicious slices of spicy pepperoni on a bed of mozzarella and our signature tomato sauce.</p>
+              </div>
+              <div class="card__price">
+                <p class="price__text">Price:</p>
+                <p class="price__amount">9.50€</p>
+              </div>
+
+            </figcaption>
+          </figure>
+
+          <figure class="menu__card">
+            <picture class="card__img">
+              <source srcset="./img/avif/pizza-quattroFormaggi1920x1920.avif" type="image/avif">
+              <img src="" alt="">
+            </picture>
+            <figcaption class="card__text">
+              <div class="text__container">
+                <h3 class="card__title">Quattro Formaggi (Four Cheese)</h3>
+                <p class="class__subtitle">A heavenly blend of mozzarella, gorgonzola, parmesan, and provolone cheeses, creating a rich and creamy pizza experience.</p>
+              </div>
+              <div class="card__price">
+                <p class="price__text">Price:</p>
+                <p class="price__amount">11.00€</p>
+              </div>
+
+            </figcaption>
+          </figure>
+
+          <figure class="menu__card">
+            <picture class="card__img">
+              <source srcset="./img/avif/pizza-caprichosa1920x1920.avif" type="image/avif">
+              <img src="" alt="">
+            </picture>
+            <figcaption class="card__text">
+              <div class="text__container">
+                <h3 class="card__title">Capricciosa (Capricious)</h3>
+                <p class="class__subtitle">A heavenly blend of mozzarella, gorgonzola, parmesan, and provolone cheeses, creating a rich and creamy pizza experience.</p>
+              </div>
+              <div class="card__price">
+                <p class="price__text">Price:</p>
+                <p class="price__amount">12.00€</p>
+              </div>
+
+            </figcaption>
+          </figure>
+
+          <figure class="menu__card">
+            <picture class="card__img">
+              <source srcset="./img/avif/Pizza-Vegetariana.avif" type="image/avif">
+              <img src="" alt="">
+            </picture>
+            <figcaption class="card__text">
+              <div class="text__container">
+                <h3 class="card__title">Vegetariana (Vegetarian)</h3>
+                <p class="class__subtitle">Fresh seasonal vegetables, including bell peppers, onions, zucchini, and mushrooms, topped with mozzarella and tomato sauce.</p>
+              </div>
+              <div class="card__price">
+                <p class="price__text">Price:</p>
+                <p class="price__amount">10.00€</p>
+              </div>
+
+            </figcaption>
+          </figure>
+        </article>
+
+        <div class='divider'></div>
+
+        <article class="container__right menu__cards">
+          <h2 class="menu__title">SPECIAL PIZZAS</h2>
+          <figure class="menu__card">
+            <picture class="card__img">
+              <source srcset="./img/avif/pizza-salami&pepperoni1920x1920.avif" type="image/avif">
+              <img src="" alt="">
+            </picture>
+            <figcaption class="card__text">
+              <div class="text__container">
+                <h3 class="card__title">Salame e Peperoni(Salami and Pepperoni)</h3>
+                <p class="class__subtitle">A flavorful combination of rich salami and spicy pepperoni, topped with mozzarella and fresh herbs.</p>
+              </div>
+              <div class="card__price">
+                <p class="price__text">Price:</p>
+                <p class="price__amount">13.00€</p>
+              </div>
+
+            </figcaption>
+          </figure>
+
+          <figure class="menu__card">
+            <picture class="card__img">
+              <source srcset="./img/avif/pizza-diavola1920x1920.avif" type="image/avif">
+              <img src="" alt="">
+            </picture>
+            <figcaption class="card__text">
+              <div class="text__container">
+                <h3 class="card__title">Diavola (Devil's)</h3>
+                <p class="class__subtitle">For spice lovers, this pizza features spicy Italian sausage, hot peppers, and a hint of chili flakes on a mozzarella and tomato base.</p>
+              </div>
+              <div class="card__price">
+                <p class="price__text">Price:</p>
+                <p class="price__amount">13.50€</p>
+              </div>
+            </figcaption>
+          </figure>
+
+          <figure class="menu__card">
+            <picture class="card__img">
+              <source srcset="./img/avif/pizza-trufflemushroom.avif" type="image/avif">
+              <img src="" alt="">
+            </picture>
+            <figcaption class="card__text">
+              <div class="text__container">
+                <h3 class="card__title">Truffle e Funghi (Truffle and Mushroom)</h3>
+                <p class="class__subtitle">A gourmet delight with earthy truffle oil, wild mushrooms, mozzarella, and a sprinkle of fresh parsley.</p>
+              </div>
+              <div class="card__price">
+                <p class="price__text">Price:</p>
+                <p class="price__amount">14.00€</p>
+              </div>
+
+            </figcaption>
+          </figure>
 
 
-      <main>
-        <div class="container">
-            <section class="menu">
-                <h2>Pizzas</h2>
-                <p>Details and images of pizzas.</p>
+          <figure class="menu__card">
+            <picture class="card__img">
+              <source srcset="./img/avif/pizza-ProsciuttoRucola.avif" type="image/avif">
+              <img src="" alt="">
+            </picture>
+            <figcaption class="card__text">
+              <div class="text__container">
+                <h3 class="card__title">Prosciutto e Rucola (Ham and Arugula)</h3>
+                <p class="class__subtitle">A perfect blend of salty prosciutto, fresh arugula, and shaved parmesan on a mozzarella and tomato base.</p>
+              </div>
+              <div class="card__price">
+                <p class="price__text">Price:</p>
+                <p class="price__amount">12.50€</p>
+              </div>
 
-                <h2>Appetizers</h2>
-                <p>Details and images of appetizers.</p>
+            </figcaption>
+          </figure>
 
-                <h2>Salads</h2>
-                <p>Details and images of salads.</p>
+          <figure class="menu__card">
+            <picture class="card__img">
+              <source srcset="./img/avif/pizza-caprichosa1920x1920.avif" type="image/avif">
+              <img src="" alt="">
+            </picture>
+            <figcaption class="card__text">
+              <div class="text__container">
+                <h3 class="card__title">Fetta di Beatitudine Speciale (Slice of Bliss Special)</h3>
+                <p class="class__subtitle">Our signature pizza featuring a mix of premium ingredients: buffalo mozzarella, cherry tomatoes, prosciutto, and a drizzle of balsamic glaze.</p>
+              </div>
+              <div class="card__price">
+                <p class="price__text">Price:</p>
+                <p class="price__amount">15.00€</p>
+              </div>
 
-                <h2>Desserts</h2>
-                <p>Details and images of desserts.</p>
+            </figcaption>
+          </figure>
+        </article>
 
-                <h2>Beverages</h2>
-                <p>Details and images of beverages.</p>
-            </section>
-        </div>
+      </section>
+
+      <section class="fixedimg">
+        <!-- <img
+          src="./img/avif/home-table_desktop.avif"
+          alt="table with pizzas"
+          class="fixedimg__img"
+        /> -->
+      </section>
+
+  
     </main>
 
     <!-- Include footer -->
     <!-- <div data-include="footer.html"></div> -->
-    <footer>
-      <div class="container">
-          <p>&copy; 2024 Pizzeria. All rights reserved.</p>
+
+    <footer class="footer">
+      <div class="footer__container">
+        <a href="./index.html" class="footer__logo"
+          ><img
+            src="./img/logo/png/logo-no-background.png"
+            srcset=""
+            alt="logo pizzeria"
+            class="logo__img"
+        /></a>
+        <section class="footer__content">
+          <ul class="footer__links">
+            <li class="footer__link">
+              <a href="./privacypolicy.html" class="link__technical"
+                >Privacy Policy</a
+              >
+            </li>
+            <li class="footer__link">
+              <a href="./legal.html" class="link__technical">Legal Notice</a>
+            </li>
+            <li class="footer__link">
+              <a href="./terms.html" class="link__technical"
+                >Terms and Conditions</a
+              >
+            </li>
+          </ul>
+
+          <div class="footer__social">
+            <a
+              href="https://www.instagram.com/pizzeria.fettadibeatitudine/"
+              class="social__link"
+              ><img
+                src="./svg/Instagram_Vector.svg"
+                srcset=""
+                alt="instagram" /></a
+            ><a
+              href="https://www.facebook.com/pizzeria.fettadibeatitudine/"
+              class="social__link"
+              ><img src="./svg/Facebook_Vector.svg" srcset="" alt="facebook"
+            /></a>
+            <a
+              href="https://www.twitter.com/pizzeria.fettadibeatitudine/"
+              class="social__link"
+              ><img src="./svg/X-Twitter_Vector.svg" srcset="" alt="instagram"
+            /></a>
+            <a
+              href="https://www.pinterest.com/pizzeria.fettadibeatitudine/"
+              class="social__link"
+              ><img src="./svg/Pinterest_Vector.svg" srcset="" alt="youtube"
+            /></a>
+          </div>
+        </section>
+        <p class="footer__copyright">&copy; 2024 FETTA DI BEATITUDINE</p>
       </div>
-  </footer>
-</body>
+    </footer>
 
-
-
+    <!-- <script src="/js/loadComponents.js"></script> -->
+  </body>
 </html>
