reservation page desktop version complete

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <title>Pizzeria - Home</title>
 
     <!-- Etiquetas Open Graph y Twitter Card, para crear el SEO de Redes Sociales -->
-    <meta property="og:title" content="Título de tu página" />
-    <meta property="og:description" content="Descripción de tu página" />
+    <meta property="og:title" content="Pizzeria Fetta di Beatitudine" />
+    <meta property="og:description" content="Project website of pizzeria by Tibor Kopca" />
     <meta
       property="og:image"
       content="URL de la imagen que quieres mostrar en las redes sociales"
@@ -28,7 +28,7 @@
     <meta property="og:url" content="URL de tu página" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Título de tu página" />
+    <meta name="twitter:title" content="Pizzeria Fetta di Beatitudine" />
     <meta name="twitter:description" content="Descripción de tu página" />
     <meta
       name="twitter:image"
