privacy policy page completed

--- a/legal.html
+++ b/legal.html
@@ -60,7 +60,7 @@
         <nav class="nav">
           <ul class="nav__links">
             <li class="links__item">
-              <a href="home.html" class="nav__item link__active">Home</a>
+              <a href="home.html" class="nav__item">Home</a>
             </li>
             <li class="links__item">
               <a href="about.html" class="nav__item">About</a>
